# Hashkell-Subtitles

./: README.md  hashkell-subtitles.cabal  stack.yaml  subtitle-downloader.cabal
src/: Main.hs
src/Hashkell/: Config.hs  Hash.hs  Network.hs  Types.hs
