cabal-version: 2.2

name:           hashkell-subtitles
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/stephanoumenos/Hashkell-Subtitles#README.md>
homepage:       https://github.com/stephanoumenos/Hashkell-Subtitles#README.md
bug-reports:    https://github.com/stephanoumenos/Hashkell-Subtitles/issues
author:         Stefano De Checchi
maintainer:     bous@stephanoumenos.xyz
copyright:      2019 stephanoumenos
license:        GPL-3.0-only
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/stephanoumenos/Hashkell-Subtitles

common shared-properties
  default-language: Haskell2010
  build-depends:  base >= 4.7 && <5
               ,  bytestring
               ,  binary
               ,  MissingH
               ,  hex
               ,  http-conduit
               ,  filepath
               ,  aeson
               ,  resourcet
               ,  http-client
               ,  conduit
               ,  conduit-extra
               ,  optparse-applicative
               ,  ConfigFile
               ,  mtl
               ,  directory
               ,  async
               ,  containers
  ghc-options: -O2 -Wall

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules: Hashkell.Config
                 , Hashkell.Network
                 , Hashkell.Hash
                 , Hashkell.Types

executable hashkell-subtitles
  import: shared-properties
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:  Hashkell.Config
               ,  Hashkell.Types
               ,  Hashkell.Network
               ,  Hashkell.Hash

