cabal-version: 2.2

name:           subtitle-downloader
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/stephanoumenos/subtitle-downloader#readme>
homepage:       https://github.com/stephanoumenos/subtitle-downloader#readme
bug-reports:    https://github.com/stephanoumenos/subtitle-downloader/issues
author:         Stefano De Checchi
maintainer:     bous@stephanoumenos.xyz
copyright:      2019 stephanoumenos
--license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/stephanoumenos/subtitle-downloader

common shared-properties
  default-language: Haskell2010
  build-depends:  base >= 4.7 && <5
               ,  bytestring
               ,  binary
               ,  MissingH
               ,  hex
               ,  http-conduit
               ,  pureMD5
               ,  filepath
               ,  aeson
               ,  text
               ,  resourcet
               ,  http-client
               ,  conduit
               ,  conduit-extra
               ,  zlib
  ghc-options: -O2 -Wall

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules: Hashkell.Network
                 , Hashkell.Hash
                 , Hashkell.Types

executable subtitle-downloader
  import: shared-properties
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:  Hashkell.Types
               ,  Hashkell.Network
               ,  Hashkell.Hash

